--- a/Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_SST_anomalies_MHW_2023/Med_MHW_2023.ipynb
+++ b/Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_SST_anomalies_MHW_2023/Med_MHW_2023.ipynb
@@ -644,7 +644,7 @@
     "EUMETSAT",
     "CMEMS"
    ],
-   "subtheme": "Oceans and climate",
+   "subtheme": "Climate system monitoring - Ocean",
    "tags": "Sea surface temperature"
   },
   "title": "Exploring North Atlantic and Mediterranean marine heatwaves using SST"
