--- a/Case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/Marine_heat_wave_intensification_threatens_coral_reef_health/Marine_heat_wave_intensification_threatens_coral_reef_health.ipynb
+++ b/Case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/Marine_heat_wave_intensification_threatens_coral_reef_health/Marine_heat_wave_intensification_threatens_coral_reef_health.ipynb
@@ -943,7 +943,7 @@
     "EUMETSAT",
     "CMEMS"
    ],
-   "subtheme": "Oceans and climate",
+   "subtheme": "Climate system monitoring - Ocean",
    "tags": "Sea surface temperature"
   },
   "title": "Exploring marine heatwaves with Sentinel-3 SLSTR and CMEMS OSTIA SST"
