--- a/Case_studies/UN_Ocean_Decade/Challenge07_expanding_the_GOOS/Quantifying_sea_level_rise_with_S6/Quantifying_sea_level_rise_with_S6.ipynb
+++ b/Case_studies/UN_Ocean_Decade/Challenge07_expanding_the_GOOS/Quantifying_sea_level_rise_with_S6/Quantifying_sea_level_rise_with_S6.ipynb
@@ -510,7 +510,10 @@
    ],
    "sensor": ["Poseidon-4"],
    "service": "EUMETSAT",
-   "subtheme": "Maritime safety",
+   "subtheme": [
+    "Maritime safety",
+    "Climate system monitoring - Ocean"
+   ],
    "tags": "Sea surface height"
   },
   "title": "Measuring sea level rise with Sentinel-6"
