--- a/Index.ipynb
+++ b/Index.ipynb
@@ -213,10 +213,10 @@
     "CMEMS"
    ],
    "subtheme": [
+    "Climate system monitoring - Ocean",
     "Maritime safety",
     "Ocean biogeochemistry",
-    "Ocean fluxes",
-    "Oceans and climate",
+    "Oceans dynamics",
     "Water quality"
    ],
    "tags": [
