--- a/Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_SST_anomalies_MHW_2023/Med_MHW_2023.ipynb
+++ b/Case_studies/Ocean_phenomena/Basin_scale_variability/Atlantic_Med_SST_anomalies_MHW_2023/Med_MHW_2023.ipynb
@@ -631,7 +631,7 @@
    }
   },
   "tags": {
-   "domain": "Marine",
+   "domain": ["Marine","Climate"],
    "platform": [
     "Sentinel-3",
     "CMEMS"
