--- a/Index.ipynb
+++ b/Index.ipynb
@@ -194,7 +194,7 @@
    }
   },
   "tags": {
-   "domain": "Marine",
+   "domain": ["Marine","Climate"],
    "platform": [
     "Sentinel-3",
     "Sentinel-6",
