--- a/Case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/Marine_heat_wave_intensification_threatens_coral_reef_health/Marine_heat_wave_intensification_threatens_coral_reef_health.ipynb
+++ b/Case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/Marine_heat_wave_intensification_threatens_coral_reef_health/Marine_heat_wave_intensification_threatens_coral_reef_health.ipynb
@@ -885,7 +885,7 @@
  "metadata": {
   "author": "Ben Loveday, Hayley Evers-King",
   "description": "This UN Ocean Decade challenge Jupyter Notebook, shows how to investigate marine heatwaves using EUMETSAT Sentinel-3 SLSTR and CMEMS OSTIA SST products.",
-  "image": "../../../img/thumbs/Marine_heatwaves_intensification_threatens_coral_reef_health_thumb.png",
+  "image": "../../../../img/thumbs/Marine_heatwaves_intensification_threatens_coral_reef_health_thumb.png",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
