--- a/Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela/Deoxygenation_impacts_marine_life_benguela.ipynb
+++ b/Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela/Deoxygenation_impacts_marine_life_benguela.ipynb
@@ -547,7 +547,7 @@
  "metadata": {
   "author": "Ben Loveday, Hayley Evers-King, Marie Smith",
   "description": "This UN Ocean Decade challenge Jupyter Notebook, shows how map EUMETSAT Sentinel-3 OLCI level-2 chlorophyll products over a deoxygenation event in the Benguela region.",
-  "image": "../../../img/thumbs/Deoxygenation_impacts_marine_life_benguela_thumb.png",
+  "image": "../../../../img/thumbs/Deoxygenation_impacts_marine_life_benguela_thumb.png",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
