--- a/Case_studies/UN_Ocean_Decade/Challenge06_community_resilience_ocean_hazards/Tracking_tropical_cyclone_impacts_using_altimetry/Tracking_tropical_cyclone_impacts_using_altimetry.ipynb
+++ b/Case_studies/UN_Ocean_Decade/Challenge06_community_resilience_ocean_hazards/Tracking_tropical_cyclone_impacts_using_altimetry/Tracking_tropical_cyclone_impacts_using_altimetry.ipynb
@@ -11414,7 +11414,7 @@
  "metadata": {
   "author": "Ben Loveday, Hayley Evers-King, Vinca Rosmorduc",
   "description": "This UN Ocean Decade challenge Jupyter Notebook, demonstrates mapping significant wave height from the EUMETSAT Sentinel-3 and (optionally) Sentinel-6 SAR radar altimeters.",
-  "image": "../../../img/thumbs/Tracking_tropical_cyclone_impacts_using_altimetry_thumb.png",
+  "image": "../../../../img/thumbs/Tracking_tropical_cyclone_impacts_using_altimetry_thumb.png",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
