--- a/Case_studies/UN_Ocean_Decade/Challenge07_expanding_the_GOOS/Quantifying_sea_level_rise_with_S6/Quantifying_sea_level_rise_with_S6.ipynb
+++ b/Case_studies/UN_Ocean_Decade/Challenge07_expanding_the_GOOS/Quantifying_sea_level_rise_with_S6/Quantifying_sea_level_rise_with_S6.ipynb
@@ -459,7 +459,7 @@
  "metadata": {
   "author": "Ben Loveday, Hayley Evers-King, Vinca Rosmorduc",
   "description": "This Notebook shows how to calculate mean seal level from Sentinel-6 full cycle",
-  "image": "../../../img/thumbs/Quantifying_sea_level_rise_with_S6_thumb.png",
+  "image": "../../../../img/thumbs/Index_thumb.png",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
