--- a/Index.ipynb
+++ b/Index.ipynb
@@ -149,7 +149,7 @@
  "metadata": {
   "author": "Ben Loveday, Hayley Evers-King",
   "description": "This repository provides case study examples using EUMETSAT Copernicus marine data",
-  "image": "../img/thumbs/Index_thumb.png",
+  "image": "./img/thumbs/Index_thumb.png",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
