--- a/Case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/Marine_heat_wave_intensification_threatens_coral_reef_health/Marine_heat_wave_intensification_threatens_coral_reef_health.ipynb
+++ b/Case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/Marine_heat_wave_intensification_threatens_coral_reef_health/Marine_heat_wave_intensification_threatens_coral_reef_health.ipynb
@@ -901,7 +901,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.8.17"
   },
   "services": {
    "eumetsat": {
@@ -930,7 +930,10 @@
    }
   },
   "tags": {
-   "domain": ["Marine","Climate"],
+   "domain": [
+    "Marine",
+    "Climate"
+   ],
    "platform": [
     "Sentinel-3",
     "CMEMS"
