--- a/Index.ipynb
+++ b/Index.ipynb
@@ -165,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.18"
   },
   "services": {
    "eumetsat": {
@@ -194,7 +194,10 @@
    }
   },
   "tags": {
-   "domain": ["Marine","Climate"],
+   "domain": [
+    "Marine",
+    "Climate"
+   ],
    "platform": [
     "Sentinel-3",
     "Sentinel-6",
