--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+v2024.01: 01.03.2024
+
+- Python dependency updates
+- minor code updates and tidying
+- new notebooks on extreme waves and ENSO
+
 v1.0: 2023-07-06
 
 - first release!
