--- a/Index.ipynb
+++ b/Index.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "### Module outline\n",
     "\n",
-    "Welcome to the **ocean-case-studies** module. This repository consists of a series of Jupyter Notebooks that either reflect one or more facets of a marine case study, as published on the EUMETSAT website, or focusses on a specific ocean region or oceanographic phenomenon. Though ancillary data sources may be used, the notebooks focus on the use of Copernicus Marine data from <a href=\"https://www.eumetsat.int/sentinel-3\" target=\"_blank\">Sentinel-3</a> and <a href=\"https://www.eumetsat.int/sentinel-6\" target=\"_blank\">Sentinel-6</a> provided by EUMETSAT. Many of the cases are highlight specific uses of individual sensors to monitor ocean phenomena, and/or how to use their data in combination with other data streams. Others are linked to <a href=\"https://www.oceandecade.org/challenges/\" target=\"_blank\">UN Ocean Decade challenges</a>.\n",
+    "Welcome to the **ocean-case-studies** module. This repository consists of a series of Jupyter Notebooks that either reflect one or more facets of a marine case study, as published on the EUMETSAT website, or focusses on a specific ocean region or oceanographic phenomenon. Though ancillary data sources, such as those from EUMETSAT mandatory missions or the <a href=\"https://marine.copernicus.eu/\" target=\"_blank\">Copernicus Marine Service</a> may be used, the notebooks focus on the use of Copernicus Marine data from <a href=\"https://www.eumetsat.int/sentinel-3\" target=\"_blank\">Sentinel-3</a> and <a href=\"https://www.eumetsat.int/sentinel-6\" target=\"_blank\">Sentinel-6</a> provided by EUMETSAT. Many of the cases are highlight specific uses of individual sensors to monitor ocean phenomena, and/or how to use their data in combination with other data streams. Others are linked to <a href=\"https://www.oceandecade.org/challenges/\" target=\"_blank\">UN Ocean Decade challenges</a>.\n",
     "\n",
     "The list of case studies is every-growing and the EUMETSAT Copernicus Marine Training Service aims to produce a new notebook alongside every new marine case study published on our website, where feasible.\n",
     "\n",
@@ -86,7 +86,7 @@
     "\n",
     "### How to use this material\n",
     "\n",
-    "This module is based around a series of **<a href=\"https://jupyter.org/\" target=\"_blank\">Jupyter Notebooks</a>**. These support high-level interactive learning by allowing us to combine code, text descriptions and data visualisations. If you have not worked with Jupyter Notebooks before, please look at the **<a href=\"./working-with-python/Intro_to_Python_and_Jupyter.ipynb\" target=\"_blank\">Introduction to Python and Project Jupyter</a>** module to get a short introduction to their usage and benefits. Refer to this module's <a href=\"https://gitlab.eumetsat.int/eumetlab/oceans/ocean-training/applications/ocean-case-studies\" target=\"_blank\">**README**</a> for further information on how to set up Jupyter.\n",
+    "This module is based around a series of <a href=\"https://jupyter.org/\" target=\"_blank\">Jupyter Notebooks</a>. These support high-level interactive learning by allowing us to combine code, text descriptions and data visualisations. If you have not worked with Jupyter Notebooks before, please look at the <a href=\"./working-with-python/Intro_to_Python_and_Jupyter.ipynb\" target=\"_blank\">Introduction to Python and Project Jupyter</a> module to get a short introduction to their usage and benefits. Refer to this module's <a href=\"https://gitlab.eumetsat.int/eumetlab/oceans/ocean-training/applications/ocean-case-studies\" target=\"_blank\">README</a> for further information on how to set up Jupyter.\n",
     "\n",
     "This module is split into three parts, focussed on:\n",
     "* Case studies that are relevant to the <font color=\"#3498DB\">**UN Ocean Decade**</font>, challenges.\n",
@@ -104,7 +104,7 @@
     "Very broadly, from this module, you can expect to learn:\n",
     "* How to use multiple remote-sensing based data sets to address the UN ocean decade challenges\n",
     "* How to work with the Copernicus marine data streams from Sentinel-3 and Sentinel-6\n",
-    "* How to contextualise satellite data with products from different levels (e.g. level-1B to level-4)\n",
+    "* How to contextualise satellite data with products from different levels (e.g. level 1b to level 4)\n",
     "* How to combine Earth observation data with *in situ* measurements and model simulations\n",
     "\n",
     "Each notebook contains more specific information on its expected learning outcomes.\n",
@@ -136,24 +136,23 @@
     "* **Challenge 08:** Coming soon\n",
     "* **Challenge 09:** Coming soon\n",
     "* **Challenge 10:** Coming soon\n",
-    "<br><br>\n",
+    "<br>\n",
+    "\n",
+    "<hr>\n",
     "\n",
     "2. <font color=\"#1F618D\">**Marine applications**</font>\n",
     "* **Climate system monitoring: cryosphere:** *coming soon*\n",
-    "     <hr>\n",
     "* **Climate system monitoring: ocean:** <a href=\"./Case_studies/CSM_ocean/Atl_Med_anomalies/Atlantic_Med_SST_anomalies.ipynb\">Sea surface temperature anomalies and trends in the Northern Atlantic and Mediterranean Sea</a> *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>)*\n",
     "* **Climate system monitoring: ocean:** <a href=\"./Case_studies/CSM_ocean/Med_MHW_2023/Med_MHW.ipynb\">Marine heatwaves in the Mediterranean Sea</a> *(<font color=\"#C0392B\">**Copernicus Marine Service OSTIA & C3S/CCI SST**</font>)*\n",
-    "     <hr>\n",
     "* **Maritime safety:** <a href=\"./Case_studies/Maritime_safety/Topography_SWH/Land_altimetry_SWH.ipynb\">Linking land topography with altimetry derived winds and significant wave height</a> *(<font color=\"#8E44AD\">**Sentinel-3 SRAL altimetry**</font>)*\n",
     "* **Maritime safety:** <a href=\"./Case_studies/Maritime_safety/Extreme_waves/SWH_storms_2023.ipynb\">Exploring extreme waves during a major North Atlantic winter storms in November, 2023</a> *(<font color=\"#8E44AD\">**Sentinel-3 SRAL altimetry**</font>, <font color=\"#8E44AD\">**Copernicus Marine Service Global Wave Reanalysis**</font>)*\n",
-    "     <hr>\n",
     "* **Ocean biogeochemistry:** *coming soon*\n",
-    "     <hr>\n",
     "* **Ocean dynamics:** <a href=\"./Case_studies/Ocean_dynamics/Agulhas_biophysical/Coming_soon.md\">Variability and biophysical interactions in the Agulhas Current</a> *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>, <font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>, <font color=\"#8E44AD\">**Sentinel-3 SRAL altimetry**</font> & <font color=\"#8E44AD\">**Globcurrent velocity**</font>)*  *(coming soon)*\n",
     "* **Ocean dynamics:** <a href=\"./Case_studies/Ocean_dynamics/Alboran_gyre_variability/Coming_soon.md\">Mesoscale variability in the Alboran Gyre</a> *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>, <font color=\"#C0392B\">**Sentinel-3 SLSTR SST**</font>)* *(coming soon)*\n",
-    "    <hr>\n",
     "* **Water quality:** <a href=\"./Case_studies/Water_quality/Algal_blooms/Algal_blooms_baltic_2023.ipynb\">Investigating cyanobacterial algal blooms in the Baltic Sea</a> *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>, <font color=\"#1E8449\">**Copernicus Marine Service Ocean Colour products**</font>)*\n",
-    "    <hr><br>\n",
+    "<br>\n",
+    "\n",
+    "<hr>\n",
     "\n",
     "3. <font color=\"#D35400\">**Data acquisition and synthesis**</font>\n",
     "* <a href=\"./Case_studies/Acq_syn/Altimetry_cycles_orbits/Altimetry_orbit_cycle_selection.ipynb\">Selecting altimetry products by orbital parameter</a> *(<font color=\"#8E44AD\">**Sentinel-3 SRAL altimetry**</font> & <font color=\"#8E44AD\">**Sentinel-6 altimetry**</font>)*\n",
