--- a/Index.ipynb
+++ b/Index.ipynb
@@ -132,7 +132,7 @@
     "* <a href=\"./Case_studies/UNOD/Ch05/Quantifying_PIC_POC/Quantifying_PIC_POC.ipynb\">**Challenge 05:** Quantifying particulate organic and inorganic carbon in the ocean</a> *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>)*\n",
     "* <a href=\"./Case_studies/UNOD/Ch05/ENSO_evolution_2023/ENSO_altimetry_hovmoller.ipynb\">**Challenge 05:** Observing marine ENSO progression throughout 2023</a> *(<font color=\"#8E44AD\">**Copernicus Marine Service level-4 altimetry**</font>)*\n",
     "* <a href=\"./Case_studies/UNOD/Ch06/Tropical_cyclones_altimetry/Tropical_cyclones_altimetry.ipynb\">**Challenge 06:** Tracking tropical storm impacts using altimetry</a> *(<font color=\"#8E44AD\">**Sentinel-3 SRAL & Sentinel-6 altimetry**</font>)*\n",
-    "* <a href=\"./Case_studies/UNOD/Ch07/SLR_S6/Coming_soon.md\">**Challenge 07:** Quantifying sea level rise with Sentinel-6</a> *(<font color=\"#8E44AD\">**Sentinel-6 altimetry**</font>)* *(coming soon)*\n",
+    "* <a href=\"./Case_studies/UNOD/Ch07/SLR_S6/coming_soon.md\">**Challenge 07:** Quantifying sea level rise with Sentinel-6</a> *(<font color=\"#8E44AD\">**Sentinel-6 altimetry**</font>)* (coming soon)\n",
     "* **Challenge 08:** Coming soon\n",
     "* **Challenge 09:** Coming soon\n",
     "* **Challenge 10:** Coming soon\n",
