--- a/Case_studies/Maritime_safety/Extreme_waves/SWH_storms_2023.ipynb
+++ b/Case_studies/Maritime_safety/Extreme_waves/SWH_storms_2023.ipynb
@@ -6708,7 +6708,7 @@
   "author": "Vinca Rosmorduc, Ben Loveday, Hayley Evers-King",
   "content_type": "Software & code",
   "data_access": [
-   "[Data Store",
+   "Data Store",
    "CMEMS"
   ],
   "deployment": {
@@ -6754,7 +6754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.2"
   },
   "license": "MIT",
   "metadata_schema_version": "2.0.0",
