--- a/Case_studies/Acq_syn/Data_cubes/Pan_collection_cubes.ipynb
+++ b/Case_studies/Acq_syn/Data_cubes/Pan_collection_cubes.ipynb
@@ -936,14 +936,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": "3"
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "03.10.14"
+   "version": "3.12.2"
   },
   "license": "MIT",
   "metadata_schema_version": "2.0.0",
