--- a/Case_studies/CSM_ocean/Med_MHW_2023/Med_MHW.ipynb
+++ b/Case_studies/CSM_ocean/Med_MHW_2023/Med_MHW.ipynb
@@ -2128,7 +2128,7 @@
   "author": "Ben Loveday, Hayley Evers-King",
   "content_type": "Software & code",
   "data_access": [
-   "[WEkEO",
+   "WEkEO",
    "CMEMS"
   ],
   "deployment": {
@@ -2174,7 +2174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.2"
   },
   "license": "MIT",
   "metadata_schema_version": "2.0.0",
