--- a/Index.ipynb
+++ b/Index.ipynb
@@ -187,7 +187,7 @@
   "author": "Ben Loveday, Hayley Evers-King, Vinca Rosmorduc",
   "content_type": "Software & code",
   "data_access": [
-   "[Data Store",
+   "Data Store",
    "Data Tailor",
    "WEkEO",
    "CMEMS"
@@ -235,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.2"
   },
   "license": "MIT",
   "metadata_schema_version": "2.0.0",
