--- a/Index.ipynb
+++ b/Index.ipynb
@@ -127,12 +127,14 @@
     "1. <font color=\"#3498DB\">**UN Ocean Decade**</font>\n",
     "* **Challenge 01:** coming soon\n",
     "* <a href=\"./Case_studies/UNOD/Ch02/MHW_reefs/MHW_intensification_coral_reef_health.ipynb\">**Challenge 02:** Marine heatwaves intensification threatens coral reef health</a> *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>)*\n",
+    "* <a href=\"./Case_studies/UNOD/Ch02/Algal_blooms/Algal_blooms_summer_2024.ipynb\">**Challenge 02:** Viewing European Algal Blooms from Summer 2024</a> *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>)*\n",
     "* <a href=\"./Case_studies/UNOD/Ch03/Deoxygenation_benguela/Deoxygenation_benguela.ipynb\">**Challenge 03:** Deoxygenation impacts marine life in the Benguela</a> *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>)*\n",
     "* **Challenge 04:** Coming soon\n",
     "* <a href=\"./Case_studies/UNOD/Ch05/Quantifying_PIC_POC/Quantifying_PIC_POC.ipynb\">**Challenge 05:** Quantifying particulate organic and inorganic carbon in the ocean</a> *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>)*\n",
     "* <a href=\"./Case_studies/UNOD/Ch05/ENSO_evolution_2023/ENSO_altimetry_hovmoller.ipynb\">**Challenge 05:** Observing marine ENSO progression throughout 2023</a> *(<font color=\"#8E44AD\">**Copernicus Marine Service level-4 altimetry**</font>)*\n",
     "* <a href=\"./Case_studies/UNOD/Ch06/Tropical_cyclones_altimetry/Tropical_cyclones_altimetry.ipynb\">**Challenge 06:** Tracking tropical storm impacts using altimetry</a> *(<font color=\"#8E44AD\">**Sentinel-3 SRAL & Sentinel-6 altimetry**</font>)*\n",
-    "* <a href=\"./Case_studies/UNOD/Ch07/SLR_S6/coming_soon.md\">**Challenge 07:** Quantifying sea level rise with Sentinel-6</a> *(<font color=\"#8E44AD\">**Sentinel-6 altimetry**</font>)* (coming soon)\n",
+    "* <a href=\"./Case_studies/UNOD/Ch06/Thessaly_floods/Coming_soon.md\">**Challenge 06:** Monitoring coastal and lake water quality since the 2023 floods in Thessaly, Greece.</a> *(<font color=\"#8E44AD\">**Sentinel-3 SRAL & Sentinel-6 altimetry**</font>)* *(coming soon)*\n",
+    "* <a href=\"./Case_studies/UNOD/Ch07/SLR_S6/SLR_with_S6.ipynb\">**Challenge 07:** Quantifying sea level rise with Sentinel-6</a> *(<font color=\"#8E44AD\">**Sentinel-6 altimetry**</font>)*\n",
     "* **Challenge 08:** Coming soon\n",
     "* **Challenge 09:** Coming soon\n",
     "* **Challenge 10:** Coming soon\n",
