--- a/Index.ipynb
+++ b/Index.ipynb
@@ -127,7 +127,7 @@
     "1. <font color=\"#3498DB\">**UN Ocean Decade**</font>\n",
     "* **Challenge 01:** coming soon\n",
     "* <a href=\"./Case_studies/UNOD/Ch02/MHW_reefs/MHW_intensification_coral_reef_health.ipynb\">**Challenge 02:** Marine heatwaves intensification threatens coral reef health</a> *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA SST**</font>)*\n",
-    "* <a href=\"./Case_studies/UNOD/Ch02/Algal_blooms/Algal_blooms_summer_2024.ipynb\">**Challenge 02:** Viewing European Algal Blooms from Summer 2024</a> *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>)*\n",
+    "* <a href=\"./Case_studies/UNOD/Ch02/Algal_blooms/Algal_blooms_summer_2024.ipynb\">**Challenge 02:** Viewing algal blooms in European seas during Summer 2024</a> *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>)*\n",
     "* <a href=\"./Case_studies/UNOD/Ch03/Deoxygenation_benguela/Deoxygenation_benguela.ipynb\">**Challenge 03:** Deoxygenation impacts marine life in the Benguela</a> *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>)*\n",
     "* **Challenge 04:** Coming soon\n",
     "* <a href=\"./Case_studies/UNOD/Ch05/Quantifying_PIC_POC/Quantifying_PIC_POC.ipynb\">**Challenge 05:** Quantifying particulate organic and inorganic carbon in the ocean</a> *(<font color=\"#1E8449\">**Sentinel-3 OLCI ocean colour**</font>)*\n",
