--- a/Case_studies/UNOD/Ch03/Deoxygenation_benguela/Deoxygenation_benguela.ipynb
+++ b/Case_studies/UNOD/Ch03/Deoxygenation_benguela/Deoxygenation_benguela.ipynb
@@ -38,7 +38,7 @@
     "    <div style=\"float:left\"><p>&emsp;</p></div>\n",
     "  </div> \n",
     "  <div style=\"width:100%\">\n",
-    "    <div style=\"float:left\"><a href=\"https://mybinder.org/v2/git/https%3A%2F%2Fgitlab.eumetsat.int%2Feumetlab%2Foceans%2Focean-training%2Fapplications%2Focean-case-studies/HEAD?labpath=Case_studies%2FUNOD%2FCh03%2FDeoxygenation_benguela.ipynb\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Open in Binder\"></a></div>\n",
+    "    <div style=\"float:left\"><a href=\"https://mybinder.org/v2/git/https%3A%2F%2Fgitlab.eumetsat.int%2Feumetlab%2Foceans%2Focean-training%2Fapplications%2Focean-case-studies/HEAD?labpath=Case_studies%2FUNOD%2FCh03%2FDeoxygenation_benguela%2F/Deoxygenation_benguela.ipynb\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Open in Binder\"></a></div>\n",
     "    <div style=\"float:left\"><p>&emsp;</p></div>\n",
     "  </div>\n",
     "  <div style=\"width:100%\">\n",
