--- a/Case_studies/Maritime_safety/Extreme_waves/SWH_storms_2023.ipynb
+++ b/Case_studies/Maritime_safety/Extreme_waves/SWH_storms_2023.ipynb
@@ -6737,7 +6737,7 @@
     }
    }
   },
-  "description": "This Jupyter Notebook shows how coastal orography can effect the wind field, using altimetry data from Sentinel-3 and SAR from Sentinel-1.",
+  "description": "This Jupyter Notebook shows how winter storms in the Atlantic effect extreme waves, using Sentinel-3 SRAL and CMEMS data.",
   "image": "../../../img/thumbs/SWH_storms_2023_thumb.png",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
@@ -6754,7 +6754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.15"
   },
   "license": "MIT",
   "metadata_schema_version": "2.0.0",
@@ -6784,7 +6784,7 @@
     "Significant wave height"
    ]
   },
-  "title": "Linking land topography with altimetry derived winds and significant wave height",
+  "title": "Exploring extreme waves during a major North Atlantic winter storms.",
   "version": "2.0.0",
   "version_date": "2024-09-02"
  },
