--- a/Case_studies/Acq_syn/Data_cubes/Pan_collection_cubes.ipynb
+++ b/Case_studies/Acq_syn/Data_cubes/Pan_collection_cubes.ipynb
@@ -310,7 +310,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This token '07d0918b-de20-3b1d-80e4-c3305446bb1a' expires 2024-04-30 15:50:37.527082\n"
+      "This token '51b94db4-b0fc-3019-b8d3-6f4c5caa7436' expires 2024-10-25 13:01:15.326345\n"
      ]
     }
    ],
@@ -458,7 +458,7 @@
      "output_type": "stream",
      "text": [
       "Found 2039 reprocessed products\n",
-      "Found 1546 operational products\n"
+      "Found 1795 operational products\n"
      ]
     }
    ],
@@ -496,7 +496,7 @@
      "output_type": "stream",
      "text": [
       "The last available reprocessing products is at 20210428T094703\n",
-      "Found 1546 matching products that occur after the end of the reprocessing\n"
+      "Found 1795 matching products that occur after the end of the reprocessing\n"
      ]
     }
    ],
@@ -670,7 +670,64 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Customising S3A_OL_2_WFR____20241010T095428_20241010T095728_20241011T160342_0179_118_022_2160_MAR_O_NT_003.SEN3\n",
+      "Customisation 29306128 is running.\n",
+      "Customisation 29306128 is running.\n",
+      "Customisation 29306128 is running.\n",
+      "Customisation 29306128 is successfully completed.\n",
+      "Customisation 29306128 outputs downloading.\n",
+      "Customisation 29306128 outputs cleared.\n",
+      "Customising S3B_OL_2_WFR____20241010T091536_20241010T091836_20241011T161951_0179_098_264_2160_MAR_O_NT_003.SEN3\n",
+      "Customisation e996a33a is running.\n",
+      "Customisation e996a33a is running.\n",
+      "Customisation e996a33a is successfully completed.\n",
+      "Customisation e996a33a outputs downloading.\n",
+      "Customisation e996a33a outputs cleared.\n",
+      "Customising S3B_OL_2_WFR____20241009T094147_20241009T094447_20241010T170335_0180_098_250_2160_MAR_O_NT_003.SEN3\n",
+      "Customisation a4a70397 is running.\n",
+      "Customisation a4a70397 is running.\n",
+      "Customisation a4a70397 is successfully completed.\n",
+      "Customisation a4a70397 outputs downloading.\n",
+      "Customisation a4a70397 outputs cleared.\n",
+      "Customising S3A_OL_2_WFR____20241008T090549_20241008T090849_20241009T154830_0179_117_378_2160_MAR_O_NT_003.SEN3\n",
+      "Customisation 906a5022 is running.\n",
+      "Customisation 906a5022 is running.\n",
+      "Customisation 906a5022 is successfully completed.\n",
+      "Customisation 906a5022 outputs downloading.\n",
+      "Customisation 906a5022 outputs cleared.\n",
+      "Customising S3A_OL_2_WFR____20241007T093200_20241007T093500_20241008T163111_0180_117_364_2160_MAR_O_NT_003.SEN3\n",
+      "Customisation 46210aba is running.\n",
+      "Customisation 46210aba is running.\n",
+      "Customisation 46210aba is successfully completed.\n",
+      "Customisation 46210aba outputs downloading.\n",
+      "Customisation 46210aba outputs cleared.\n",
+      "Customising S3B_OL_2_WFR____20241007T085310_20241007T085610_20241008T164840_0179_098_221_2160_MAR_O_NT_003.SEN3\n",
+      "Customisation f1a1c652 is running.\n",
+      "Customisation f1a1c652 is running.\n",
+      "Customisation f1a1c652 is successfully completed.\n",
+      "Customisation f1a1c652 outputs downloading.\n",
+      "Customisation f1a1c652 outputs cleared.\n",
+      "Customising S3A_OL_2_WFR____20241006T095810_20241006T100110_20241007T172816_0179_117_350_2160_MAR_O_NT_003.SEN3\n",
+      "Customisation 342e6f5d is running.\n",
+      "Customisation 342e6f5d is running.\n",
+      "Customisation 342e6f5d is successfully completed.\n",
+      "Customisation 342e6f5d outputs downloading.\n",
+      "Customisation 342e6f5d outputs cleared.\n",
+      "Customising S3B_OL_2_WFR____20241006T091921_20241006T092221_20241007T153854_0179_098_207_2160_MAR_O_NT_003.SEN3\n",
+      "Customisation 1aa0a08c is running.\n",
+      "Customisation 1aa0a08c is running.\n",
+      "Customisation 1aa0a08c is running.\n",
+      "Customisation 1aa0a08c is successfully completed.\n",
+      "Customisation 1aa0a08c outputs downloading.\n",
+      "Customisation 1aa0a08c outputs cleared.\n"
+     ]
+    }
+   ],
    "source": [
     "if download_data:\n",
     "    \n",
@@ -770,9 +827,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "404 GET /viewer/config/config.json (127.0.0.1): xcube viewer has not been been configured\n",
+      "404 GET /viewer/config/config.json (127.0.0.1) 2.85ms\n"
+     ]
+    }
+   ],
    "source": [
     "viewer = Viewer(\n",
     "    server_config={\n",
@@ -797,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,29 +879,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<iframe src=\"http://localhost:8000/viewer/?serverUrl=http://localhost:8000&compact=1\" width=\"100%\" height=\"800\"/>"
+       "<iframe src=\"http://localhost:8001/viewer/?serverUrl=http://localhost:8001&compact=1\" width=\"100%\" height=\"800\"/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "404 GET /viewer/config/config.json (127.0.0.1): xcube viewer has not been been configured\n",
-      "404 GET /viewer/config/config.json (127.0.0.1) 13.98ms\n"
-     ]
     }
    ],
    "source": [
@@ -943,7 +1001,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.14"
   },
   "license": "MIT",
   "metadata_schema_version": "2.0.0",
