--- a/Index.ipynb
+++ b/Index.ipynb
@@ -269,7 +269,7 @@
     "Climate system monitoring - Ocean",
     "Maritime safety",
     "Ocean biogeochemistry",
-    "Oceans dynamics",
+    "Ocean dynamics",
     "Water quality"
    ],
    "theme": "Marine",
