--- a/Case_studies/Acq_syn/Cruise_tracks/Cruise_tracker.ipynb
+++ b/Case_studies/Acq_syn/Cruise_tracks/Cruise_tracker.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "source": [
     "<font color=\"#138D75\">**Copernicus Marine Training Service**</font> <br>\n",
-    "**Copyright:** 2024 EUMETSAT <br>\n",
+    "**Copyright:** 2024 European Union <br>\n",
     "**License:** MIT <br>\n",
     "**Authors:** Ben Loveday (EUMETSAT/Innoflair UG), Hayley Evers-King (EUMETSAT)"
    ]
@@ -1892,7 +1892,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.14"
   },
   "license": "MIT",
   "metadata_schema_version": "2.0.0",
