--- a/Case_studies/Maritime_safety/Extreme_waves/SWH_storms_2023.ipynb
+++ b/Case_studies/Maritime_safety/Extreme_waves/SWH_storms_2023.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "source": [
     "<font color=\"#138D75\">**Copernicus Marine Training Service**</font> <br>\n",
-    "**Copyright:** 2024 EUMETSAT <br>\n",
+    "**Copyright:** 2024 European Union <br>\n",
     "**License:** MIT <br>\n",
     "**Authors:** Vinca Rosmorduc (CLS), Ben Loveday (EUMETSAT/Innoflair UG), Hayley Evers-King (EUMETSAT)"
    ]
@@ -6754,7 +6754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.14"
   },
   "license": "MIT",
   "metadata_schema_version": "2.0.0",
