--- a/Case_studies/UNOD/Ch06/Tropical_cyclones_altimetry/Tropical_cyclones_altimetry.ipynb
+++ b/Case_studies/UNOD/Ch06/Tropical_cyclones_altimetry/Tropical_cyclones_altimetry.ipynb
@@ -219,11 +219,11 @@
    "outputs": [],
    "source": [
     "# Altimetry parameters: S3\n",
-    "download_S3_data = False\n",
+    "download_S3_data = True\n",
     "S3_timeliness = \"NT\"\n",
     "\n",
     "# Altimetry parameters: S6\n",
-    "download_S6_data = False\n",
+    "download_S6_data = True\n",
     "S6_timeliness = \"NT\"\n",
     "\n",
     "day_pad = 1"
